tests/diagnostics/naming/casing/parameter_not_camel_case/expect.txt
# exit: 1
lib.coppice:1:15: error: parameter name must be camelCase
  function demo(BadParam: int64) -> int64 {
                ^
